--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -11,7 +11,7 @@
     height: 140px;
 
     margin: 50px 0;
-    padding-left: 54px;
+    padding-left: 280px;
 
     position: relative;
 
